edit for nav row wrapping correction

--- a/lesson4/css/large.css
+++ b/lesson4/css/large.css
@@ -7,5 +7,41 @@
 	}
 
 
+	/*moved from medium because it went to a a second line*/
+	header img {
+		width: 100px;
+	}
+	
+	header h1 {
+		padding: 10px;
+		font-size: 2.5rem;
+	}
+	
+	header h2 {
+		font-size: 1.5rem;
+		text-align: left;
+	}
+		
+
+	
+	nav button {display: none;}
+		
+		nav ul.hide {
+			display: block;
+		}
+
+		nav ul li {
+			float: left;
+		}
+		
+		nav ul li a {
+			border: none;
+			border-right: 1px solid rgba(0,0,0,0.3);
+			padding: .6rem 1rem;
+		}
+		
+		nav ul { display: flex; }
+		nav ul li { flex: 1 1 100%; }
+		
 	
 } /*end large */
